Fixed Display on phones
Text was overlapping and going off page. Allowed parts to wrap and change size in order to accommodate a smaller screen

--- a/Polynomials/Polynomials.css
+++ b/Polynomials/Polynomials.css
@@ -10,6 +10,15 @@ html {
 	height: 100%;
 }
 
+#inputs {
+	margin-left: 20px;
+	display: flex;
+	flex-direction: column;
+	height: 700px;
+	width: 500px;
+	overflow: hidden;
+}
+
 .coeff-box {
 	width: 220px;
 	height: 100%;
@@ -44,20 +53,22 @@ html {
 	padding-top: 1px;
 	margin-left: 20px;
 	/*width: 200px;*/
-	height: 550px;
 	display: flex;
 	flex-direction: row;
+	margin-bottom: 20px;
 }
 
 #usage {
 	color: white;
-	width: 350px;
+	/*width: 350px;*/
+	width: 33%;
 	flex-grow: 1;
 }
 
 #description {
 	padding-left: 40px;
-	width: 350px;
+	/*width: 350px;*/
+	width: 33%;
 	flex-grow: 1;
 }
 
@@ -67,7 +78,8 @@ html {
 
 #purpose {
 	padding-left: 40px;
-	width: 350px;
+	/*width: 350px;*/
+	width: 33%;
 	flex-grow: 1;
 }
 
